fixed footer gap, added link to Code Club, added date and venue

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,7 @@
     color:white;
     object-fit:contain;
     text-align: center;
+    padding:5px;
 }
 
 .Footer a{
